appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: "My Calendar, tab, 2 of 3"
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: 'You have no upcoming bookings.'
- tapOn: 'Search, tab, 1 of 3'
- tapOn: 'M-100 M-Building available'
- tapOn: 'Reserve'
- tapOn:
    point: '92%,13%'
- tapOn: '06:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'M-100 M-Building available'
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: 'M-100'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: '${output.getTomorrowDate.commaFormat} at 06.00 - ${output.getTomorrowDate.commaFormat} at 07.00'
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: "Cancel"
- tapOn: "Cancel"
- tapOn: "Yes, Cancel"
- clearState
