appId: com.daria111.mobilefrontend
tags:
    - login
---
- launchApp
- assertVisible: 'Log In'
- tapOn: 'Username'
- inputText: 'jd10000'
- tapOn: 'Password'
- inputText: 'password'
- tapOn:
    point: '50%,41%'
- tapOn:
    point: '50%,70%'
- assertVisible: 'M-100 M-Building available'
- clearState