appId: com.daria111.mobilefrontend
---
- launchApp
- tapOn: 'M-100 M-Building available'
- tapOn: 'Reserve'
- tapOn:
    point: '92%,13%'
- tapOn: '06:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'M-100 M-Building available'
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: 'M-100'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: '${output.getTomorrowDate.commaFormat} at 06.00 - ${output.getTomorrowDate.commaFormat} at 07.00'
- assertVisible: 'Modify'
- tapOn: 'Modify'
- assertVisible: 'Reservation from Booking App'
- longPressOn:
    point: '70%,36%'
- tapOn: 'Select All'
- eraseText
- inputText: 'New Title'
- hideKeyboard
- tapOn: 'Save'
- assertVisible: 'Booking updated successfully.'
- tapOn: "My Calendar, tab, 2 of 3"
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: 'New Title'
- tapOn: 'Modify'
- tapOn: '${output.getTomorrowDate.spaceFormat} at 06:00'
- assertVisible: ${output.getTomorrowDate.weekDayFormat}
- tapOn: 09:00:00
- tapOn: 'Confirm'
- assertVisible: 'Starts: ${output.getTomorrowDate.commaFormat} at 9:00 AM'
- assertVisible: 'Ends: ${output.getTomorrowDate.commaFormat} at 10:00 AM'
- tapOn: 'Save'
- assertVisible: 'Booking updated successfully.'
- tapOn: "My Calendar, tab, 2 of 3"
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: '${output.getTomorrowDate.commaFormat} at 09.00 - ${output.getTomorrowDate.commaFormat} at 10.00'
- tapOn: "My Calendar, tab, 2 of 3"
- assertVisible: "Cancel"
- tapOn: "Cancel"
- tapOn: "Yes, Cancel"
- clearState
