appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'M-100 M-Building available'
- tapOn: 'M-100 M-Building available'
- assertVisible: 'M-100'
- assertVisible: 'Reserve'
- scrollUntilVisible:
    element: 'Show upcoming reservations'
- tapOn: 'Show upcoming reservations'
- assertVisible: 'You have no upcoming bookings.'
- tapOn: 'Close'
- scrollUntilVisible:
    element: 'Reserve'
    direction: UP
- tapOn: 'Reserve'
- tapOn:
    point: '92%,13%'
- runScript: ../src/scripts/getTomorrowDate.js
- assertVisible: ${output.getTomorrowDate.weekDayFormat}
- tapOn: '06:00:00'
- tapOn: 'Confirm'
- assertVisible: 'Booking Details'
- tapOn: 'Reserve'
- assertVisible: 'Booking created successfully.'
- assertVisible: 'M-100 M-Building available'
- tapOn: 'M-100 M-Building available'
- scrollUntilVisible:
    element: 'Show upcoming reservations'
- tapOn: 'Show upcoming reservations'
- assertVisible: 'Reservation from Booking App'
- assertVisible: 'M-100'
- assertVisible: '${output.getTomorrowDate.commaFormat} at 06.00 - ${output.getTomorrowDate.commaFormat} at 07.00'
- assertVisible: 'Cancel'
- tapOn: 'Cancel'
- assertVisible: 'Cancel Booking'
- assertVisible: 'Are you sure you want to cancel this booking?'
- tapOn: 'Yes, Cancel'
- assertVisible: 'You have no upcoming bookings.'
- tapOn: 'Close'
- clearState
